web/css/console.less
@import 'bootstrap';
@import 'bootstrap-fileupload.less';
@import 'backgrid';
@import 'font-icon';
@import 'jquery-ui';
@import 'nvd3';
@import 'workflow';
@import 'content';
@import 'event';

.transition (@properties: opacity, @duration: .5s, @transition: ease-in-out, @delay: 0) {
  -webkit-transition: @properties @duration @transition @delay;
  -moz-transition: @properties @duration @transition @delay;
  transition: @properties @duration @transition @delay;
}

.ellipsis(@max_width: 5em) {
  max-width: @max_width;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.btn-color(@bkg-color, @font-color: #fff, @disabled-font-color: #ccc) {
  @bkg-from-color: lighten(@bkg-color, 10%);
  @bkg-to-color: darken(@bkg-color, 10%);
  color: @font-color;
  background-color: @bkg-color;
  background-image: -moz-linear-gradient(top, @bkg-from-color, @bkg-to-color);
  background-image: -webkit-linear-gradient(top, @bkg-from-color, @bkg-to-color);
  background-image: linear-gradient(to bottom, @bkg-from-color, @bkg-to-color);
  background-repeat: repeat-x;
  border-color: @bkg-from-color @bkg-color @bkg-to-color;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  &:hover, &:focus, &:active, &.active, &.disabled, &[disabled] {
    background-color: @bkg-to-color;
  }
  &:hover, &:focus, &:active, &.active {
    color: @font-color;
  }
  &.disabled, &[disabled] {
    color: @disabled-font-color;
  }
}

html, body {
  padding: 0;
  margin: 0;
  height: 100%;
  .transition;
}

.tpl, .tmp {
  // template or tmp hide
  display: none !important;
}

a.pointer {
  cursor: pointer;
}

.btn-round {
  display: inline-block;
  width: 25px;
  height: 25px;
  border-radius: 25px;
  line-height: 25px;
  vertical-align: middle;
  font-size: 14px;
  clear: none;
  padding: 0;
  margin: 0 2px;
  text-align: center;
  overflow: hidden;
  button& {
    // add border and padding
    width: 27px;
    height: 27px;
  }
  &:before {
    margin: 0;
  }
}

ul.action-bar {
  margin-left: 0;
  list-style: none;
  > .head {
    font-size: 20px;
    font-weight: bold;
    vertical-align: bottom;
    margin-bottom: 3px;
  }
  > li {
    display: inline-block;
    margin-left: 5px;
    > * {
      margin: 0;
    }
  }
  .nav {
    margin-bottom: 0;
  }
}

.action-buttons > .btn {
  margin-left: 5px;
}

.box {
  border: 1px solid #DEDEDE;
  border-radius: 3px;
  margin: 10px;
  margin-bottom: 10px;
  -webkit-box-shadow: 0 0 10px rgba(189, 189, 189, 0.4);
  -moz-box-shadow: 0 0 10px rgba(189, 189, 189, 0.4);
  box-shadow: 0 0 10px rgba(189, 189, 189, 0.4);

  .box-header {
    border: none;
    padding-top: 5px;
    border-bottom: 1px solid #DEDEDE;
    border-radius: 3px 3px 0 0;
    -webkit-border-radius: 3px 3px 0 0;
    -moz-border-radius: 3px 3px 0 0;
    height: 12px;
    min-height: 12px;
    margin-bottom: 0;
    padding-right: 10px;
    font-weight: bold;
    font-size: 16px;
    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
    background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
  }
  .box-header h4 {
    font-size: 15px;
    width: auto;
    clear: none;
    float: left;
    line-height: 25px;
    margin: 0;
  }
  .box-header h2 > i {
    margin-top: 1px;
  }
  .box-icon {
    float: right;
  }
  .box-content {
    padding: 10px;
    opacity: 1;
    overflow: hidden;
    .transition(all, .3s, ease);

    &.minimized {
      opacity: 0;
      padding: 1px 10px;
      height: 0;
    }
  }
}

// Signin

#signin {
  z-index: 1000;

  &.mask {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: #f5f5f5;
    .transition
  }

  .form-signin {
    position: absolute;
    width: 300px;
    top: 50%;
    left: 50%;
    padding: 19px 29px 29px;
    margin: -150px;
    background-color: #fff;
    border: 1px solid #e5e5e5;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
    box-shadow: 0 1px 2px rgba(0, 0, 0, .05);

    .form-signin-heading,
    .checkbox {
      margin-bottom: 10px;
    }

    input[type="email"],
    input[type="password"] {
      font-size: 16px;
      height: auto;
      margin-bottom: 15px;
      padding: 7px 9px;
    }
  }
}

// Console

#main {
  position: absolute;
  width: 100%;
  height: 100%;
  min-width: 768px;
  visibility: hidden;

  .loading {
    position: fixed;
    top: 50%;
    left: 50%;
    height: 32px;
    width: 32px;
    padding: 0;
    font-size: 32px;
    line-height: 32px;
    margin-left: -16px;
    margin-top: -16px;
    &:before {
      margin: 0;
    }
  }
}

// Navbar

#avatar {
  width: 20px;
  height: 20px;
  float: left;
  margin: auto 5px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

#navbar {
  box-shadow: 0 0 15px #aaa;
  ul.nav {
    // Hover Dropdown
    margin: 0;
    > li {
      display: inline-block;
      margin: 0;
      .transition(background-color, .1s);
      &.hover {
        background-color: rgba(200, 200, 200, .2);
      }
      &.dropdown {
        ul.dropdown-menu {
          display: block;
          visibility: hidden;
          margin-top: -5px;
          opacity: 0;
          .transition(all, .25s, ease-in-out, .15s)
        }

        &.hover ul.dropdown-menu {
          visibility: visible;
          opacity: 1;
          margin-top: 0;
        }

        .caret {
          border-top-color: #999;
          border-bottom-color: #999;
        }
      }
    }
  }

  [class^="icon-"]:before, [class*=" icon-"]:before {
    margin: 0 5px 0 -5px;
  }
}

#frames {
  position: absolute;
  top: 41px;
  bottom: 0;
  left: 0;
  right: 0;

  .frame, .inner-frame {
    display: none;
    &.active {
      display: block;
    }
  }

  .frame {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 15px;
    margin: 0;

    .inner-frame, .sidebar, .workspace, .sidebar .well {
      position: relative;
      height: 100%;
      padding: 0;
      margin: -1px;
    }

    .sidebar-list {
      overflow: auto;
      overflow-x: hidden;
      height: 75%;
      .nav-header {
        margin-top: .5em;
      }
      .btn-refresh {
        float: right;
        width: 0;
        margin-right: .5em;
        padding: 0;
        cursor: pointer;
        background: transparent;
        border: 0;
        color: #000;
        opacity: 0.2;
        &:hover, &:focus {
          text-decoration: none;
          opacity: 0.4;
        }
      }
    }

    .sidebar-bottom {
      position: absolute;
      height: 25%;
      bottom: 10px;
      overflow: hidden;
      left: 0;
      right: 0;
      text-overflow: ellipsis;
    }

    .workspace {
      margin-left: 13px;
      overflow: auto;

      .page-header {
        margin: 0 0 10px;
        padding-bottom: 0;
        h3 {
          margin: 0 .2em;
          small {
            margin-left: 1em;
          }
        }
      }

      // dropdown menu fix
      .pull-right {
        .dropdown-menu {
          left: auto;
          right: 0;

          &:after {
            left: auto;
            right: 13px;
          }
        }
      }
    }
  }

  footer {
    padding: 1px 20px;
  }
}

.modal-full {
  position: fixed;
  top: 5%;
  bottom: 5%;
  left: 5%;
  width: 90%;
  margin: 0;

  &.fade, &.fade.in {
    // override
    top: 5%;
  }

  .modal-body {
    max-height: none;
    max-width: none;
    position: absolute;
    top: 50px;
    bottom: 60px;
    left: 0;
    right: 0;
  }
  .modal-footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
  }

  .sidebar {
    float: left;
    width: 175px;
  }
  .content {
    position: absolute;
    left: 200px;
    top: 15px;
    right: 15px;
    bottom: 15px;
    overflow: auto;
  }
}

.form-horizontal .control-group {
  margin-bottom: 10px; // override default 20px
}

.grid-scroller {
  width: 100%;
  overflow: auto;
}

.grid-table {
  .datetime-cell {
    font-size: 12px;
  }
  .project-link-cell {
    .ellipsis(6em);
  }
  .action-link-cell {
    .ellipsis(12em);
    .project-title {
      display: inline-block;
      vertical-align: middle;
      .ellipsis(5em);
    }
  }
}

.grid-filter form {
  margin: 0;
}

.capitalized {
  text-transform: capitalize;
}

#user_profile {
  max-width: 800px;
  margin: 15px 20%;
}

#user_avatar {
  width: 200px;
  overflow: visible;
  img {
    width: 200px;
    height: 200px;
  }
}

@facebook-color: #3B5998;
@twitter-color: #00aced;

.label-twitter {
  background-color: @twitter-color;
}

.label-facebook {
  background-color: @facebook-color;
}

.btn-twitter {
  .btn-color(@twitter-color);
}

.btn-facebook {
  .btn-color(@facebook-color);
}

#service_status {
  padding: 15px;
  .btn-block {
    margin-bottom: 20px;
    @grow-size: 20px;
    &.connected {
      @grow-color: #468847;
      border-color: @grow-color;
      outline-color: @grow-color;
      -webkit-box-shadow: inset 0 0 @grow-size @grow-color, 0 0 @grow-size @grow-color;
      -moz-box-shadow: inset 0 0 @grow-size @grow-color, 0 0 @grow-size @grow-color;
      box-shadow: inset 0 0 @grow-size @grow-color, 0 0 @grow-size @grow-color;
    }
    &.disconnected {
      @grow-color: #b94a48;
      border-color: @grow-color;
      outline-color: @grow-color;
      -webkit-box-shadow: inset 0 0 @grow-size @grow-color, 0 0 @grow-size @grow-color;
      -moz-box-shadow: inset 0 0 @grow-size @grow-color, 0 0 @grow-size @grow-color;
      box-shadow: inset 0 0 @grow-size @grow-color, 0 0 @grow-size @grow-color;
    }
  }
  .form-horizontal pre {
    margin: 0;
    margin-right: 20px;
    padding: .4em .5em;
  }
}

#report_viewer {
  .modal-header {
    border-bottom: none;
    > .nav {
      margin-bottom: 0;
      h3 {
        margin: 0 10px 0 0;
      }
    }
  }
  .chart svg {
    min-width: 400px;
    min-height: 300px;
    height: auto;
  }
}

